Fixed spacing

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -75,8 +75,8 @@ a {
   -webkit-grid-template-columns: 50% 50%;
   grid-template-columns: 50% 50%;
   width: 100%;
-  -webkit-grid-template-rows: 33% 33%;
-  grid-template-rows: 33% 33%;
+  -webkit-grid-template-rows: 50% 50%;
+  grid-template-rows: 50% 50%;
 }
 
 .project {
